force-app/main/default/objects/Credentials__c/Credentials__c.object-meta.xml
<CustomObject>
    <label>Deployment_Credentials</label>
    <nameField>
        <label>Credentials</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment_Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>