force-app/main/default/objects/Credentials__c/fields/Connected_App_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Connected_App_Client_Id__c</fullName>
    <label>Connected_App_Client_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>