force-app/main/default/objects/Credentials__c/fields/Connected_App_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Connected_App_Client_Secret__c</fullName>
    <label>Connected_App_Client_Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>