force-app/main/default/objects/Credentials__c/fields/Deployment_Environment__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>Deployment_Environment__c</referenceTo>
    <relationshipLabel>Environment</relationshipLabel>
    <relationshipName>Deployment_Environment</relationshipName>
    <type>Lookup</type>
</CustomField>