force-app/main/default/objects/Credentials__c/fields/SFDX_Auth_URL__c.field-meta.xml
<CustomField>
    <fullName>SFDX_Auth_URL__c</fullName>
    <label>SFDX Auth URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>